feat(memory): memory search works well with gemini embeddings
